# dbt_protips

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
dbt/: dbt_project.yml
dbt/models/: de_bootcamp.yml
dbt/models/scd/: stg_devices.sql
