[tool.poetry]
name = "dbt-protips"
version = "0.1.0"
description = ""
authors = ["mateusz <mateusz@geew.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"
sqlfmt = "^0.0.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
